apply plugin: 'com.android.application'
apply plugin: 'com.google.gms.google-services'
apply plugin: 'com.google.firebase.crashlytics'

def getLocalProperty(String propName) {
    def propsFile = rootProject.file('local.properties')
    if (propsFile.exists()) {
        def props = new Properties()
        props.load(new FileInputStream(propsFile))
        return props[propName]
    } else {
        return ""
    }
}

def getGitHash = { ->
    def stdout = new ByteArrayOutputStream()
    exec {
        commandLine 'git', 'rev-parse', '--short', 'HEAD'
        standardOutput = stdout
    }
    return stdout.toString().trim()
}

android {
    compileSdkVersion 31
    buildToolsVersion "29.0.2"
    defaultConfig {
        applicationId "com.halloapp"
        minSdkVersion 21
        targetSdkVersion 31
        versionCode 1031
        versionName "1.31"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        buildConfigField "String", "GIT_HASH", "\"${getGitHash()}\""
    }
    buildTypes {
        release {
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            resValue "bool", "isDebug", "false"
        }
        debug {
            resValue "bool", "isDebug", "true"
        }
    }
    splits {
        abi {
            enable true
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    signingConfigs {
        debug {
            storeFile file('debug.keystore')
            storePassword "android"
            keyAlias "androiddebugkey"
            keyPassword "android"
        }
    }
}

// Make sure each abi has its own version code https://developer.android.com/studio/build/configure-apk-splits#configure-APK-versions
ext.abiCodes = ['armeabi-v7a':1, x86:2, x86_64:3, 'arm64-v8a':4]
import com.android.build.OutputFile
android.applicationVariants.all { variant ->
    variant.outputs.each { output ->
        def abiVersionCodeSuffix = project.ext.abiCodes.get(output.getFilter(OutputFile.ABI))
        if (abiVersionCodeSuffix == null) { // If we ever decide to build a universal apk again
            abiVersionCodeSuffix = 0
        }
        output.versionCodeOverride = abiVersionCodeSuffix + variant.versionCode * 10
    }
}

configurations {
    all*.exclude group: 'xpp3', module: 'xpp3'
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    implementation platform('com.google.firebase:firebase-bom:29.2.1') // Ensures firebase libraries are compatible
    implementation 'com.google.firebase:firebase-crashlytics'
    implementation 'com.google.firebase:firebase-messaging'
    implementation 'io.sentry:sentry-android:5.7.1'

    implementation 'androidx.appcompat:appcompat:1.4.1'
    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
    implementation 'androidx.exifinterface:exifinterface:1.2.0'
    implementation 'androidx.navigation:navigation-fragment:2.2.2'
    implementation 'androidx.navigation:navigation-ui:2.2.2'
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
    implementation 'androidx.paging:paging-runtime:2.1.2'
    implementation 'androidx.preference:preference:1.1.1'
    implementation 'androidx.security:security-crypto:1.1.0-alpha03'
    implementation 'androidx.work:work-runtime:2.7.1'
    implementation 'at.favre.lib:hkdf:1.1.0'
    implementation 'com.dstukalov:videoconverter:1.9'
    // TODO(jack): Remove strict versions if dima updates dependencies
    implementation('org.mp4parser:isoparser') {
        version {
            strictly '1.9.41'
        }
    }
    implementation('org.mp4parser:muxer') {
        version {
            strictly '1.9.41'
        }
    }
    implementation('org.mp4parser:streaming') {
        version {
            strictly '1.9.41'
        }
    }
    implementation 'com.google.android.exoplayer:exoplayer:2.13.3'
    implementation 'com.google.android.gms:play-services-auth-api-phone:17.4.0'
    implementation 'com.google.android.material:material:1.4.0'
    implementation 'com.google.crypto.tink:tink-android:1.6.0'
    implementation "com.goterl:lazysodium-android:5.0.2@aar"
    implementation "net.java.dev.jna:jna:5.5.0@aar"
    implementation 'com.google.protobuf:protobuf-javalite:3.11.1'
    implementation 'com.hbb20:ccp:2.5.3'
    implementation 'io.michaelrocks:libphonenumber-android:8.12.19-2'
    implementation 'com.simplecityapps:recyclerview-fastscroll:2.0.1'
    implementation 'de.hdodenhof:circleimageview:3.0.1'
    implementation 'com.makeramen:roundedimageview:2.3.0'
    implementation 'me.relex:circleindicator:2.1.6'
    implementation 'pub.devrel:easypermissions:3.0.0'
    implementation "com.android.installreferrer:installreferrer:2.2"
    implementation('com.journeyapps:zxing-android-embedded:4.2.0') { transitive = false }
    implementation 'com.google.zxing:core:3.3.0'
    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
    implementation "io.noties.markwon:core:4.6.2"
    implementation "io.noties.markwon:editor:4.6.2"
    implementation "io.noties.markwon:ext-strikethrough:4.6.2"
    implementation "io.noties.markwon:inline-parser:4.6.2"
    implementation 'org.jsoup:jsoup:1.11.1'
    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
    def emoji2_version = "1.1.0-alpha01"

    implementation "androidx.emoji2:emoji2:$emoji2_version"
    implementation "androidx.emoji2:emoji2-views:$emoji2_version"
    implementation "androidx.emoji2:emoji2-views-helper:$emoji2_version"

    testImplementation 'junit:junit:4.12'
    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
    // WebRTC
    implementation(name: 'libwebrtc', ext:'aar')

    def camerax_version = "1.1.0-beta02"
    implementation "androidx.camera:camera-core:${camerax_version}"
    implementation "androidx.camera:camera-camera2:${camerax_version}"
    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
    implementation "androidx.camera:camera-video:${camerax_version}"
    implementation "androidx.camera:camera-view:${camerax_version}"
    implementation "androidx.camera:camera-extensions:${camerax_version}"
}
